--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+logging.level.org.apache.coyote.http11=debug
+#파일 하나의 최대 사이즈, 기본 1MB
+spring.servlet.multipart.max-file-size=1MB
+#멀티파트 요청 하나에 여러 파일을 업로드 할 수 있는데, 그 전체 합이다. 기본 10MB
+spring.servlet.multipart.max-request-size=10MB
 
+#이 옵션을 켜면 스프링 부트는 서블릿 컨테이너에게 멀티파트 데이터를 처리하라고 설정한다. 기본값은 true
+#spring.servlet.multipart.enabled=false
