--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.servlet.multipart.max-request-size=10MB
 
 #이 옵션을 켜면 스프링 부트는 서블릿 컨테이너에게 멀티파트 데이터를 처리하라고 설정한다. 기본값은 true
 #spring.servlet.multipart.enabled=false
+
+file.dir=C:/Users/bht90/study/file/
